// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`help command > should display all commands #0 1`] = `
"  help
  teach"
`;

exports[`help command > should display help #0 1`] = `
"
  [34mhelp[39m v0.0.0

  Displays help for a given installed webpack command.

  [4mUsage[24m
    $ webpack help <command>

  [4mExamples[24m
    $ webpack help
    $ webpack help init
    $ webpack help serve
"
`;

exports[`help command > should display help for the help command #0 1`] = `
"
  [34mhelp[39m v0.0.0

  Displays help for a given installed webpack command.

  [4mUsage[24m
    $ webpack help <command>

  [4mExamples[24m
    $ webpack help
    $ webpack help init
    $ webpack help serve
"
`;

exports[`help command > should display help for the teach command #0 1`] = `
"
  [34mteach[39m v0.0.0

  Teaches webpack-command that a command has been installed and is available.

  [4mUsage[24m
    $ webpack teach --command <command> --module <module>

  [4mOptions[24m
    --command   The name of a command that users will type
    --forget    Instructs the tool to forget a previously added command
    --module    The npm module name of a command

  [4mExamples[24m
    $ webpack teach --command init --module webpack-command-init
    $ webpack teach --command init --forget
"
`;

exports[`lib/flags > should display all commands #0 1`] = `
"  help
  teach"
`;

exports[`lib/flags > should display help #0 1`] = `
"
  [34mhelp[39m v0.0.0

  Displays help for a given installed webpack command.

  [4mUsage[24m
    $ webpack help <command>

  [4mExamples[24m
    $ webpack help init
    $ webpack help serve
"
`;

exports[`lib/flags > should display help for the help command #0 1`] = `
"
  [34mhelp[39m v0.0.0

  Displays help for a given installed webpack command.

  [4mUsage[24m
    $ webpack help <command>

  [4mExamples[24m
    $ webpack help init
    $ webpack help serve
"
`;

exports[`lib/flags > should display help for the teach command #0 1`] = `
"
  [34mteach[39m v0.0.0

  Teaches webpack-command that a command has been installed and is available.

  [4mUsage[24m
    $ webpack teach --command <command> --module <module>

  [4mOptions[24m
    --command   The name of a command that users will type
    --forget    Instructs the tool to forget a previously added command
    --module    The npm module name of a command

  [4mExamples[24m
    $ webpack teach --command init --module webpack-command-init
"
`;
